choimory-dev/k3s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: choimory-dev
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
---
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
