choimory-dev/k3s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: choimory-front-service
  namespace: choimory-dev
  labels:
    app: choimory-front
spec:
  selector:
    app: choimory-front
  ports:
  - name: http
    port: 80
    targetPort: 3000
    protocol: TCP
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: choimory-api-service
  namespace: choimory-dev
  labels:
    app: choimory-api
spec:
  selector:
    app: choimory-api
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  type: ClusterIP
