choimory-dev/k3s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: choimory-ingress
  namespace: choimory-dev
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - choimory.dev
    - api.choimory.dev
    secretName: choimory-tls
  rules:
  - host: choimory.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: choimory-front-service
            port:
              number: 80
  - host: api.choimory.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: choimory-api-service
            port:
              number: 80
